# DPLL

./: .gitignore  CMakeLists.txt  DPLL.cpp  DPLL.h  DPLL2.cpp  DPLL2.h  README.md  cnf.cpp  cnf.h  cnf2.cpp  cnf2.h  dpll  main.cpp  makefile  mem.sh
